--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello
+---
+layout: default
+title: DIARY
+---
+
+
+<style>
+    #calendar {
+        display: block;
+    }
+    #closeBtn, #openBtn {
+        display: none;
+    }
+</style>
